edited some info

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,12 @@
 {
   "liveServer.settings.port": 5501,
-  "cSpell.words": ["jquery", "matric", "MERN", "swiper", "Thunga"]
+  "cSpell.words": [
+    "Ehailing",
+    "jquery",
+    "matric",
+    "MERN",
+    "swiper",
+    "Thunga",
+    "Udemy"
+  ]
 }
